--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
     "data:import": "node backend/seeder",
-    "data:destroy": "node backend/seeder -d"
+    "data:destroy": "node backend/seeder -d",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,6 @@
   "homepage": "https://github.com/Apangshu-2021/ProShop#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "concurrently": "^6.5.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
@@ -32,5 +32,8 @@
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.4"
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0"
   }
 }
